<resources>
    <string name="app_name">TestBossNote</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_patronymic">Patronymic</string>
    <string name="hint_age">Age</string>
    <string name="hint_salary">Salary</string>
    <string name="new_select_photo">select photo</string>
    <string name="new_save">save</string>
    <string name="detail_edit">edit</string>
    <string name="detail_delete">delete</string>

    <item
        type="id"
        name="fab" />
</resources>
